# connect_four

./: Game.py  LICENSE  MANIFEST.in  Main.py  Procfile  README.md  READMETEMPLATE.md  abort_me.py  board.py  board_functions.py  build.sh  duo.py  game.py  heuristic.py  main.py  matchup.py  music.py  player.py  pypi-install.sh  pyproject.toml  return.ps1  statics.py  teamWork.py  test-upload.sh  test.py  test.sh  testpypi-install.sh  update-requirements.sh  venv-new.sh  venv.sh
src/: board.py  board_functions.py  game.py  heuristic.py  main.py  player.py  statics.py  test.py
