# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "<insert name>"
version = "<x.x.x>"
authors = [
    { name = "<insert name>", email = "<insert email>" }
]
description = "<insert package description>"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "insert",
    "keywords",
]

[project.optional-dependencies]
dev = ["flake8", "pylint", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/HyrumDickinson/<insert link>/"

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "'MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

